--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.14",
     "@grpc/proto-loader": "^0.7.7",
-    "@nest-upskilling/common": "file:../common",
+    "@nest-upskilling/common": "^1.0.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -34,6 +34,7 @@
     "@nestjs/schedule": "^2.2.2",
     "@nestjs/typeorm": "^9.0.1",
     "crono": "^0.0.3",
+    "dotenv": "^16.1.4",
     "kafkajs": "^2.2.4",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
